--- a/index.html
+++ b/index.html
@@ -46,5 +46,7 @@
           </tr>
         </tbody>
       </table>
+
+      <p><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ul">Check out the MDM documentation for more details.</a></p>
     </body>
   </html>
