<ol> MDM documentation link added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             </tr>
         </tbody>
       </table>
+
+      <p><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ol">Check out the MDM documentation for more details.</a></p>
   
       <h2>Unordered Lists</h2>
       <table>
@@ -48,5 +50,6 @@
       </table>
 
       <p><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ul">Check out the MDM documentation for more details.</a></p>
+
     </body>
   </html>
